I think the problem with you slipping in on the left side is better. I got it to do it more I just had to be fast. I changed some things and it seems to do it less although it still does it if you time it perfect. I fixed the issue where when you hit a side of the wall in one direction and then reversed you coudln't go in the other direction again because the left2/right2 variables would still be false. I also implemented the map shift function and it's working other than after you go right far enough for the map to shift when you fall left off the map you slide into the next platform. Only happens when going left not right. All the platforms maintain there proper heights other wise, holes are recognised correctly and when you fall right off a platform in any case it seems to work as it should and you hit the wall instead of going through it.

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 	left: 0px;
 
 }
-
+/*>= 0 <= 600*/
 .base {
 	display: inline-block;
 	height: 200px;
@@ -34,7 +34,7 @@ body {
 #hole {
 	display: inline-block;
 }
-
+/* hole 1 > 600 <= 800 hole 2 >1000 <= 1200*/
 .hole, .hole2 {
 	width: 200px;
 	display: inline-block;
@@ -42,25 +42,25 @@ body {
 	height: 50px;
 	background-color: red;*/
 }
-
+/*>1700 <= 1900*/
 .hole3 {
-	width: 300px;
+	width: 200px;
 }
-
+/*> 800 <= 1000*/
 .base2  {
 	display: inline-block;
 	width: 200px;
 	height: 240px;
 	background-color: blue;
 }
-
+/*>1200 <=1700*/
 .base3 {
 	display: inline-block;
 	width: 500px;
 	height: 200px;
 	background-color: blue;
 }
-
+/*>1900 <= 2000*/
 .base4 {
 	height: 200px;
 	width: 100px;
